# ML

./: .gitattributes  .gitignore  100pgMLbook.md  DLPrimer.md  README.md  grokking.ipynb  model_state.pt  notes_numpy.md  pyproject.toml
Async/: terms.py
Attention/: notes.md
DeepML/DeepLearning/: activation_derivative.py  adam.py  adam_algo.pyt  autograd.py  bce.py  cnn.py  cross_entropy_derivative.py  global_avg_pool.py  lstm.py  mnist.py  rnn.py  sigmoid.py  single_neuron.py  single_neuron_with_backprop.py  softmax.py
DeepML/LA/: eigenval.py  matrixmul.py  matrixmul_conv.py  reshape_matrix.py  svd.py  transform_basis.py
DeepML/MachineLearning/: accuracy_score.py  batch_iterator.py  correlation_matrix.py  decision_tree.py  (+16 more)
Grokking Deep Learning/: grokking_basics.ipynb  grokking_firstNN.ipynb
LA/: calculate_matrix_mean.py  eigenval.py  inverse.py  jacobi_method.py  laplace.py  matrix_dot_vector.py  matrixmul.py  reshape_matrix.py  scalar_multriplication.py  svd.py  transpose.py  transpose_matrix.py
MachineLearning/: k_fold_cross_validation.py  k_means.py  linear_regression.py  pca.py
NeuralNetworks/: .gitattributes  neuralnetwork_blog.md  neuralnetworks.md
Numpy/: blog.md  dl_math.md
Pytorch/: basics.py  notes.md  training.py
Resnet/: README.md  resnet.md  resnet.py  resnet_scratch.py
Stats/: calculate_covariance_matrix.py
algorithms/: README.md
models/: README.md  microgpt.py
papers/: README.md
pytorch/: README.md  basics.py  dimensions.ipynb  training.py
tests/: test_algorithms.py  test_attention.py  test_autograd.py  test_models.py
(+142 files in other folders)
